# dbusx

./: .clang-format  CMakeLists.txt  LICENSE  meson.build
example/: example.cc  example.cpp  example.h  main.cc  main.cpp  meson.build
include/: meson.build
include/dbusx/: bus.h  error.h  interface.h  message.h  method.h  object_path.h  property.h  signal.h  signature.h  type.h  typedef.h  utils.h  vtable.h
src/: bus.cpp  bus_private.cpp  meson.build  message.cpp  message_private.h  object_path.cc  signature.cc
src/libdbus/: bus_private.cc  bus_private.h
src/sdbus/: bus.cc  bus.cpp  bus_private.cc  bus_private.cpp  bus_private.h  message.cc  message.cpp  message_private.cc  message_private.h
test/unit_tests/: meson.build  object_path_tests.cc  type_tests.cc  type_tests.cpp
