libdbusx_public_headers = files('''
    dbusx/bus.h
    dbusx/error.h
    dbusx/interface.h
    dbusx/message.h
    dbusx/method.h
    dbusx/property.h
    dbusx/type.h
    dbusx/typedef.h
    dbusx/utils.h
    dbusx/vtable.h
'''.split())

install_headers(
    libdbusx_public_headers,
    subdir: 'dbusx',
)
